--- a/src/SiteSearch.Test/Views/Home/Search.cshtml
+++ b/src/SiteSearch.Test/Views/Home/Search.cshtml
@@ -20,10 +20,17 @@
     #search-results input[type='text'] {
         width: 100%;
     }
+    #search-results .layout {
+        display: flex;
+    }
 
     #search-results .search-facets {
-        float: left;
-        width: 25%;
+        width: 250px;
+    }
+
+    #search-results .search-items {
+        width: calc(100% - 250px);
+        margin-left: 15px;
     }
 
     #search-results .search-facets h2 {
@@ -31,10 +38,6 @@
         padding-top: 0;
     }
 
-    #search-results .search-items {
-        float: left;
-        width: 75%;
-    }
 </style>
 
 <div id="search-results">
@@ -46,40 +49,43 @@
         <button type="submit" class="mui-btn mui-btn--primary">Search</button>
     </form>
     </div>
-    <div class="search-facets">
-        @foreach (var facetGroup in Model.FacetGroups)
-        {
-            <h2>@facetGroup.Field</h2>
-            <ul>
-            @foreach (var facet in facetGroup.Facets)
+    <div class="layout">
+        <div class="search-facets">
+            @foreach (var facetGroup in Model.FacetGroups)
             {
-                <li>@facet.Key (@facet.Count)</li>
-            }
-            </ul>
-        }
-    </div>
-    <div class="search-items">
-        @if (Model.Hits.Any())
-        {
-            <p>
-                Showing @Model.Hits.Count() of @Model.TotalHits results ...
-            </p>
-
-            <div class="result-list">
-                @foreach (var item in Model.Hits)
+                <h2>@facetGroup.DisplayName</h2>
+                <ul>
+                @foreach (var facet in facetGroup.Facets)
                 {
-                    <div class="result">
-                        <h2>
-                            <a href="@item.Url" target="_blank">@Html.Raw(item.Title)</a>
-                        </h2>
-                        <p>@Html.Raw(item.Precis)</p>
-                    </div>
+                    <li><a href="@facet.DrillDownUrl">@facet.DisplayName</a> (@facet.Count)</li>
                 }
-            </div>
-        }
-        else
-        {
-            <p>No results found.</p>
-        }
+                </ul>
+            }
+        </div>
+        <div class="search-items">
+            @if (Model.Hits.Any())
+            {
+                <p>
+                    Showing @Model.Hits.Count() of @Model.TotalHits results ...
+                </p>
+
+                <div class="result-list">
+                    @foreach (var item in Model.Hits)
+                    {
+                        <div class="result">
+                            <h2>
+                                <a href="@item.Url" target="_blank">@Html.Raw(item.Title)</a>
+                            </h2>
+                            <p>@Html.Raw(item.Precis)</p>
+                        </div>
+                        <hr />
+                    }
+                </div>
+            }
+            else
+            {
+                <p>No results found.</p>
+            }
+        </div>
     </div>
 </div>
