--- a/src/SiteSearch.Test/Views/Shared/_Layout.cshtml
+++ b/src/SiteSearch.Test/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
     <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
+    <title>Super-duper search</title>
 </head>
 <body>
     <div id="content" class="mui-container-fluid">
